--- a/web/src/StoryView.css
+++ b/web/src/StoryView.css
@@ -11,6 +11,12 @@
   height: 100%;
 }
 
+.story-view-footer {
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+}
+
 .play-toolbar {
   display: flex;
   align-items: center;
